--- a/css/style.css
+++ b/css/style.css
@@ -117,8 +117,10 @@ header{
   height: 400px; /* Parallax effect */
 
   /* YOUR CODE HERE; */
-  grid-column: 1 / span 3;
+  grid-column: 1 / -1;
+  grid-row: 1 / span 1;
   background-image: url("../images/header.jpg");
+  background-repeat: no-repeat;
 }
 
 
@@ -194,50 +196,50 @@ header{
   }
 
   .container{
-    grid-template-columns: 50px, auto, 500px, auto, 50px;
-    grid-template-rows: 400px, 400px, 400px, 400px, 400px;
+    grid-template-columns: 50px auto 500px auto 50px;
+    grid-template-rows: 400px 400px 400px 400px 400px;
   }
 
   
 
   .about-image{
-    grid-column: 1 / span 2;
+    grid-column: 2 / span 2;
 
   
   }
 
   .about{
-    grid-column: 2 / span 2;
+    grid-column: 3 / span 2;
 
   }
 
   .method-image{
-    grid-column: 2 / span 2;
+    grid-column: 3 / span 2;
     
   }
 
   .method{
-    grid-column: 1 / span 2;
+    grid-column: 2 / span 2;
    
   }
 
   .clients-image{
-    grid-column: 1 / span 2;
+    grid-column: 2 / span 2;
 
   }
 
   .clients{
-    grid-column: 2 / span 2;
+    grid-column: 3 / span 2;
     
   }
 
   .contact-image{
-    grid-column: 2 / span 2;
+    grid-column: 3 / span 2;
     
   }
 
   .contact{
-    grid-column: 1 / span 2;
+    grid-column: 2 / span 2;
     
   }
 
@@ -263,5 +265,8 @@ header{
   /*Turn off parallax*/
   header{
     background-attachment: initial;
+    grid-column: 1 / -1;
+    grid-row: 1 / span 1;
+    /* Might need no repeat here?   background-repeat: no-repeat;*/
   }
 }
